@@ -4,6 +4,6 @@ EXTRA_DIST = hal-sharp.pc.in hal-sharp.mds hal-sharp.mdp
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = hal-sharp.pc
 
-DISTCLEANFILES = config.* configure INSTALL install-sh missing aclocal.m4 Makefile.in
+DISTCLEANFILES = config.* configure INSTALL install-sh missing aclocal.m4 Makefile.in *.pidb
 
 
