@@ -1,6 +1,6 @@
 AC_INIT(README)
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE(hal-sharp, 0.1)
+AM_INIT_AUTOMAKE(hal-sharp, 0.2)
 AM_MAINTAINER_MODE
 
 AC_PROG_INSTALL
