@@ -15,6 +15,8 @@
   </Configurations>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
+    <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="glib-sharp, Version=2.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </References>
   <DeploymentInformation strategy="File">
     <excludeFiles />
@@ -27,5 +29,6 @@
     <File name="./src/HalUnmanaged.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/HalContext.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/HalDefines.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/HalCallbacks.cs" subtype="Code" buildaction="Compile" />
   </Contents>
 </Project>
