@@ -1,2 +1,3 @@
+2005-07-17: hal-sharp 0.2 Committed to Mono SVN with HAL Callback Support
 2005-07-16: hal-sharp 0.1 Committed to Mono SVN
 
